@@ -1,3 +1,3 @@
-mobac.version=1.8 alpha 1 
+mobac.version=1.8 alpha 2
 mobac.revision.hide=false
 mobac.updateurl=http://mobac.dnsalias.org/mapsources-update/v1/mapsources.properties
