@@ -11,6 +11,7 @@
  1.8: (2010-03-??)
  ! Fixed PNG 256 color output
  + New atlas format: OruxMaps (Android)  
+ + New atlas format: Glopus Map File (AFTrack and others)  
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
